--- a/.github/workflows/Golang_CI.yml
+++ b/.github/workflows/Golang_CI.yml
@@ -27,8 +27,7 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: v1.53
-        args: --timeout=10m --allow-parallel-runners -p bugs -p sql -p unused -p format
+        args: --timeout=10m --allow-parallel-runners -p bugs -p sql -p unused -p format -v
     
     - name: Test
       run: go test -v ./...
-    
